--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@babel/runtime": "^7.15.4",
     "acorn": "^8.4.1",
     "acorn-import-assertions": "^1.7.6",
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
+    "babel-runtime": "^6.26.0",
     "browserslist": "^4.16.8",
     "buffer-from": "^1.1.2",
     "caniuse-lite": "^1.0.30001252",
@@ -95,12 +97,17 @@
     "yocto-queue": "^0.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.4",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
-    "webpack": "^5.51.2",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.1.0"
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "webpack": "^5.35",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
     "build": "webpack --config webpack.prod.config.js",
